Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
-
None
-
None
-
None
-
ghx-label-8
Description
The tests TestCodegenCache.
{test_codegen_cache_with_asm_module_dir,test_codegen_cache_with_perf_map}introduced by IMPALA-12260 were added to ensure we don't crash because of a use-after-free. However, use-after-free is undefined behaviour and does not guarantee a crash, so the tests don't necessarily crash without the fix of IMPALA-12260. We should find a way to make these tests detect the conditions that lead to this use-after-free.
Attachments
Issue Links
- is related to
-
IMPALA-12292 TestCodegenCache.{test_codegen_cache_with_asm_module_dir,test_codegen_cache_with_perf_map} fail in builds
- Resolved
-
IMPALA-12260 Crash if '--asm_module_dir' is set
- Resolved